src/toggl_api.h

    TOGGL_EXPORT bool_t toggl_discard_time_at(
        void *context,
        const char_t *guid,
        const int64_t at,
        const bool_t split_into_new_entry);
    TOGGL_EXPORT bool_t toggl_discard_time_and_continue(
        void *context,
        const char_t *guid,
        const int64_t at);
    TOGGL_EXPORT bool_t toggl_can_see_billable(
        void *context,
        const int64_t workspaceID);
    TOGGL_EXPORT void toggl_fetch_tags(
        void *context,
        const int64_t workspaceID);
    TOGGL_EXPORT bool_t toggl_set_settings_remind_days(
        void *context,
        const bool_t remind_mon,
        const bool_t remind_tue,
        const bool_t remind_wed,
        const bool_t remind_thu,
        const bool_t remind_fri,
        const bool_t remind_sat,
        const bool_t remind_sun);
    TOGGL_EXPORT bool_t toggl_set_settings_remind_times(
        void *context,
        const char_t *remind_starts,
        const char_t *remind_ends);
    TOGGL_EXPORT bool_t toggl_set_settings_use_idle_detection(
        void *context,
        const bool_t use_idle_detection);
    TOGGL_EXPORT bool_t toggl_set_settings_autotrack(
        void *context,
        const bool_t value);
    TOGGL_EXPORT bool_t toggl_set_settings_open_editor_on_shortcut(
        void *context,
        const bool_t value);
    TOGGL_EXPORT bool_t toggl_set_settings_autodetect_proxy(
        void *context,
        const bool_t autodetect_proxy);
    TOGGL_EXPORT bool_t toggl_set_settings_menubar_timer(
        void *context,
        const bool_t menubar_timer);
    TOGGL_EXPORT bool_t toggl_set_settings_menubar_project(
        void *context,
        const bool_t menubar_project);
    TOGGL_EXPORT bool_t toggl_set_settings_dock_icon(
        void *context,
        const bool_t dock_icon);
    TOGGL_EXPORT bool_t toggl_set_settings_on_top(
        void *context,
        const bool_t on_top);
    TOGGL_EXPORT bool_t toggl_set_settings_reminder(
        void *context,
        const bool_t reminder);
    TOGGL_EXPORT bool_t toggl_set_settings_pomodoro(
        void *context,
        const bool_t pomodoro);
    TOGGL_EXPORT bool_t toggl_set_settings_pomodoro_break(
        void *context,
        const bool_t pomodoro_break);
    TOGGL_EXPORT bool_t toggl_set_settings_stop_entry_on_shutdown_sleep(
        void *context,
        const bool_t stop_entry);
    TOGGL_EXPORT bool_t toggl_set_settings_show_touch_bar(
        void *context,
        const bool_t show_touch_bar);
    TOGGL_EXPORT bool_t toggl_set_settings_start_autotracker_without_suggestions(
        void *context,
        const bool_t start_autotracker_without_suggestions);
    TOGGL_EXPORT bool_t toggl_set_settings_start_autotracker_while_timer_is_running(
        void* context,
        const bool_t start_autotracker_while_timer_is_running);