app/lib/src/native/toggl_api_generated.dart


  late final _toggl_discard_time_atPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Char>,
            ffi.Int64,
            ffi.Int,
          )
        >
      >('toggl_discard_time_at');
  late final _toggl_discard_time_at = _toggl_discard_time_atPtr
      .asFunction<
        int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>, int, int)
      >();

  int toggl_discard_time_and_continue(
    ffi.Pointer<ffi.Void> context,
    ffi.Pointer<ffi.Char> guid,
    int at,
  ) {
    return _toggl_discard_time_and_continue(context, guid, at);
  }

  late final _toggl_discard_time_and_continuePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Char>,
            ffi.Int64,
          )
        >
      >('toggl_discard_time_and_continue');
  late final _toggl_discard_time_and_continue =
      _toggl_discard_time_and_continuePtr
          .asFunction<
            int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>, int)
          >();

  int toggl_can_see_billable(ffi.Pointer<ffi.Void> context, int workspaceID) {
    return _toggl_can_see_billable(context, workspaceID);
  }

  late final _toggl_can_see_billablePtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Int64)>
      >('toggl_can_see_billable');
  late final _toggl_can_see_billable = _toggl_can_see_billablePtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>, int)>();

  void toggl_fetch_tags(ffi.Pointer<ffi.Void> context, int workspaceID) {
    return _toggl_fetch_tags(context, workspaceID);
  }

  late final _toggl_fetch_tagsPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Int64)>
      >('toggl_fetch_tags');
  late final _toggl_fetch_tags = _toggl_fetch_tagsPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>, int)>();

  int toggl_set_settings_remind_days(
    ffi.Pointer<ffi.Void> context,
    int remind_mon,
    int remind_tue,
    int remind_wed,
    int remind_thu,
    int remind_fri,
    int remind_sat,
    int remind_sun,
  ) {
    return _toggl_set_settings_remind_days(
      context,
      remind_mon,
      remind_tue,
      remind_wed,
      remind_thu,
      remind_fri,
      remind_sat,
      remind_sun,
    );
  }

  late final _toggl_set_settings_remind_daysPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Void>,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
          )
        >
      >('toggl_set_settings_remind_days');
  late final _toggl_set_settings_remind_days =
      _toggl_set_settings_remind_daysPtr
          .asFunction<
            int Function(
              ffi.Pointer<ffi.Void>,
              int,
              int,
              int,
              int,
              int,
              int,
              int,
            )
          >();

  int toggl_set_settings_remind_times(
    ffi.Pointer<ffi.Void> context,
    ffi.Pointer<ffi.Char> remind_starts,
    ffi.Pointer<ffi.Char> remind_ends,
  ) {
    return _toggl_set_settings_remind_times(
      context,
      remind_starts,
      remind_ends,
    );
  }

  late final _toggl_set_settings_remind_timesPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('toggl_set_settings_remind_times');
  late final _toggl_set_settings_remind_times =
      _toggl_set_settings_remind_timesPtr
          .asFunction<
            int Function(
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
            )
          >();

  int toggl_set_settings_use_idle_detection(
    ffi.Pointer<ffi.Void> context,
    int use_idle_detection,
  ) {
    return _toggl_set_settings_use_idle_detection(context, use_idle_detection);
  }

  late final _toggl_set_settings_use_idle_detectionPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Int)>
      >('toggl_set_settings_use_idle_detection');
  late final _toggl_set_settings_use_idle_detection =
      _toggl_set_settings_use_idle_detectionPtr
          .asFunction<int Function(ffi.Pointer<ffi.Void>, int)>();

  int toggl_set_settings_autotrack(ffi.Pointer<ffi.Void> context, int value) {
    return _toggl_set_settings_autotrack(context, value);
  }

  late final _toggl_set_settings_autotrackPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Int)>
      >('toggl_set_settings_autotrack');
  late final _toggl_set_settings_autotrack = _toggl_set_settings_autotrackPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>, int)>();

  int toggl_set_settings_open_editor_on_shortcut(
    ffi.Pointer<ffi.Void> context,
    int value,
  ) {
    return _toggl_set_settings_open_editor_on_shortcut(context, value);
  }

  late final _toggl_set_settings_open_editor_on_shortcutPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Int)>
      >('toggl_set_settings_open_editor_on_shortcut');
  late final _toggl_set_settings_open_editor_on_shortcut =
      _toggl_set_settings_open_editor_on_shortcutPtr
          .asFunction<int Function(ffi.Pointer<ffi.Void>, int)>();

  int toggl_set_settings_autodetect_proxy(
    ffi.Pointer<ffi.Void> context,
    int autodetect_proxy,
  ) {
    return _toggl_set_settings_autodetect_proxy(context, autodetect_proxy);
  }

  late final _toggl_set_settings_autodetect_proxyPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Int)>
      >('toggl_set_settings_autodetect_proxy');
  late final _toggl_set_settings_autodetect_proxy =
      _toggl_set_settings_autodetect_proxyPtr
          .asFunction<int Function(ffi.Pointer<ffi.Void>, int)>();

  int toggl_set_settings_menubar_timer(
    ffi.Pointer<ffi.Void> context,
    int menubar_timer,
  ) {
    return _toggl_set_settings_menubar_timer(context, menubar_timer);
  }

  late final _toggl_set_settings_menubar_timerPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Int)>
      >('toggl_set_settings_menubar_timer');
  late final _toggl_set_settings_menubar_timer =
      _toggl_set_settings_menubar_timerPtr
          .asFunction<int Function(ffi.Pointer<ffi.Void>, int)>();

  int toggl_set_settings_menubar_project(
    ffi.Pointer<ffi.Void> context,
    int menubar_project,
  ) {
    return _toggl_set_settings_menubar_project(context, menubar_project);
  }

  late final _toggl_set_settings_menubar_projectPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Int)>
      >('toggl_set_settings_menubar_project');
  late final _toggl_set_settings_menubar_project =
      _toggl_set_settings_menubar_projectPtr
          .asFunction<int Function(ffi.Pointer<ffi.Void>, int)>();

  int toggl_set_settings_dock_icon(
    ffi.Pointer<ffi.Void> context,
    int dock_icon,
  ) {
    return _toggl_set_settings_dock_icon(context, dock_icon);
  }

  late final _toggl_set_settings_dock_iconPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Int)>
      >('toggl_set_settings_dock_icon');
  late final _toggl_set_settings_dock_icon = _toggl_set_settings_dock_iconPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>, int)>();

  int toggl_set_settings_on_top(ffi.Pointer<ffi.Void> context, int on_top) {
    return _toggl_set_settings_on_top(context, on_top);
  }

  late final _toggl_set_settings_on_topPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Int)>
      >('toggl_set_settings_on_top');
  late final _toggl_set_settings_on_top = _toggl_set_settings_on_topPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>, int)>();

  int toggl_set_settings_reminder(ffi.Pointer<ffi.Void> context, int reminder) {
    return _toggl_set_settings_reminder(context, reminder);
  }

  late final _toggl_set_settings_reminderPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Int)>
      >('toggl_set_settings_reminder');
  late final _toggl_set_settings_reminder = _toggl_set_settings_reminderPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>, int)>();

  int toggl_set_settings_pomodoro(ffi.Pointer<ffi.Void> context, int pomodoro) {
    return _toggl_set_settings_pomodoro(context, pomodoro);
  }

  late final _toggl_set_settings_pomodoroPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Int)>
      >('toggl_set_settings_pomodoro');
  late final _toggl_set_settings_pomodoro = _toggl_set_settings_pomodoroPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>, int)>();

  int toggl_set_settings_pomodoro_break(
    ffi.Pointer<ffi.Void> context,
    int pomodoro_break,
  ) {
    return _toggl_set_settings_pomodoro_break(context, pomodoro_break);
  }

  late final _toggl_set_settings_pomodoro_breakPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Int)>
      >('toggl_set_settings_pomodoro_break');
  late final _toggl_set_settings_pomodoro_break =
      _toggl_set_settings_pomodoro_breakPtr
          .asFunction<int Function(ffi.Pointer<ffi.Void>, int)>();

  int toggl_set_settings_stop_entry_on_shutdown_sleep(
    ffi.Pointer<ffi.Void> context,
    int stop_entry,
  ) {
    return _toggl_set_settings_stop_entry_on_shutdown_sleep(
      context,
      stop_entry,
    );
  }

  late final _toggl_set_settings_stop_entry_on_shutdown_sleepPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Int)>
      >('toggl_set_settings_stop_entry_on_shutdown_sleep');
  late final _toggl_set_settings_stop_entry_on_shutdown_sleep =
      _toggl_set_settings_stop_entry_on_shutdown_sleepPtr
          .asFunction<int Function(ffi.Pointer<ffi.Void>, int)>();

  int toggl_set_settings_show_touch_bar(
    ffi.Pointer<ffi.Void> context,
    int show_touch_bar,
  ) {
    return _toggl_set_settings_show_touch_bar(context, show_touch_bar);
  }

  late final _toggl_set_settings_show_touch_barPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Int)>
      >('toggl_set_settings_show_touch_bar');
  late final _toggl_set_settings_show_touch_bar =
      _toggl_set_settings_show_touch_barPtr
          .asFunction<int Function(ffi.Pointer<ffi.Void>, int)>();

  int toggl_set_settings_start_autotracker_without_suggestions(
    ffi.Pointer<ffi.Void> context,
    int start_autotracker_without_suggestions,
  ) {
    return _toggl_set_settings_start_autotracker_without_suggestions(
      context,
      start_autotracker_without_suggestions,
    );
  }

  late final _toggl_set_settings_start_autotracker_without_suggestionsPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Int)>
      >('toggl_set_settings_start_autotracker_without_suggestions');
  late final _toggl_set_settings_start_autotracker_without_suggestions =
      _toggl_set_settings_start_autotracker_without_suggestionsPtr
          .asFunction<int Function(ffi.Pointer<ffi.Void>, int)>();

  int toggl_set_settings_start_autotracker_while_timer_is_running(
    ffi.Pointer<ffi.Void> context,
    int start_autotracker_while_timer_is_running,
  ) {
    return _toggl_set_settings_start_autotracker_while_timer_is_running(
      context,
      start_autotracker_while_timer_is_running,
    );
  }
